--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     },
     "license": "MIT",
     "dependencies": {
-        "@azure/arm-appservice": "6.0.0",
-        "@azure/ms-rest-nodeauth": "3.0.5",
+        "@azure/arm-appservice": "6.1.0",
+        "@azure/ms-rest-nodeauth": "3.0.6",
         "@root/request": "1.6.1",
-        "jsdom": "16.3.0",
+        "jsdom": "16.4.0",
         "jquery": "3.5.1",
         "twitter-lite": "0.14.0"
+    },
+    "devDependencies": {
+        "@babel/core": "7.12.9",
+        "@babel/eslint-parser": "7.12.1"
     }
 }
